backend/financeservices/k8s/base/cohortservice.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cohortservice
spec:
  replicas: 1
  selector:
    matchLabels:
      app: cohortservice
  template:
    metadata:
      labels:
        app: cohortservice
    spec:
      containers:
      - name: cohortservice
        # Using the image built by Docker Compose
        image: financeservices-cohortservice:latest
        imagePullPolicy: Never
        ports:
        - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: cohortservice
spec:
  selector:
    app: cohortservice
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
  type: LoadBalancer
