backend/financeservices/k8s/base/processingservice.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: processingservice
spec:
  replicas: 1
  selector:
    matchLabels:
      app: processingservice
  template:
    metadata:
      labels:
        app: processingservice
    spec:
      containers:
      - name: processingservice
        image: financeservices-processingservice:latest
        imagePullPolicy: Never
        ports:
        - containerPort: 8082
---
apiVersion: v1
kind: Service
metadata:
  name: processingservice
spec:
  selector:
    app: processingservice
  ports:
    - protocol: TCP
      port: 8082
      targetPort: 8082
  type: ClusterIP
