backend/financeservices/k8s/base/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: finance-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
  - http:
      paths:
      - path: /finance/(.*)
        pathType: Prefix
        backend:
          service:
            name: apigateway
            port:
              number: 8080
